# huehue

./: .gitignore  CRATE.md  Cargo.toml  README.md  pre-commit  rustfmt.toml
examples/: authorize.rs  devices.rs  light-switch.rs  lights.rs  scan.rs
src/: bridge.rs  certificate.rs  client.rs  color.rs  device.rs  discover.rs  http.rs  hue.rs  lib.rs  light.rs
src/models/: config.rs  create_user.rs  device_type.rs  devices.rs  error.rs  generic.rs  lights.rs  meethue.rs  mod.rs
tests/: client_authorization.rs  discovery.rs
