[package]
name = "rues"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for Hue v2 API."
homepage = "https://github.com/vgobbo/rues#rues"
repository = "https://github.com/vgobbo/rues"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
mdns-sd = { version = "0.2" }
regex = { version = "1.5" }
reqwest = { version = "0.11", features = [ "json", "native-tls" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
url = { version = "2.2" }
uuid = { version = "0.8", features = [ "serde" ] }

[dev-dependencies]
structopt = { version = "0.3" }
tokio = { version = "1.15", features = [ "rt-multi-thread", "macros" ] }